mruby-sys/mruby-wrapper.h

# define TRUE 1
MRB_END_DECL
MRB_BEGIN_DECL
typedef uint32_t mrb_sym;
typedef uint8_t mrb_bool;
struct mrb_state;
  typedef int64_t mrb_int;
  typedef int16_t mrb_int;
  typedef int32_t mrb_int;
  typedef float mrb_float;
  typedef double mrb_float;
enum mrb_vtype {
  MRB_TT_FALSE = 0,   
  MRB_TT_FREE,        
  MRB_TT_TRUE,        
  MRB_TT_FIXNUM,      
  MRB_TT_SYMBOL,      
  MRB_TT_UNDEF,       
  MRB_TT_FLOAT,       
  MRB_TT_CPTR,        
  MRB_TT_OBJECT,      
  MRB_TT_CLASS,       
  MRB_TT_MODULE,      
  MRB_TT_ICLASS,      
  MRB_TT_SCLASS,      
  MRB_TT_PROC,        
  MRB_TT_ARRAY,       
  MRB_TT_HASH,        
  MRB_TT_STRING,      
  MRB_TT_RANGE,       
  MRB_TT_EXCEPTION,   
  MRB_TT_FILE,        
  MRB_TT_ENV,         
  MRB_TT_DATA,        
  MRB_TT_FIBER,       
  MRB_TT_ISTRUCT,     
  MRB_TT_BREAK,       
  MRB_TT_MAXDEFINE    
};
struct RBasic {
  MRB_OBJECT_HEADER;
};
struct RObject {
  MRB_OBJECT_HEADER;
  struct iv_tbl *iv;
};
typedef void mrb_value;
typedef struct mrb_value {
  union {
    mrb_float f;
    union {
      void *p;
      struct {
        MRB_ENDIAN_LOHI(
          uint32_t ttt;
          ,union {
            mrb_int i;
            mrb_sym sym;
          };
        )
      };
    } value;
  };
} mrb_value;
#define mrb_float(o)    (o).f
struct RFloat {
  MRB_OBJECT_HEADER;
  mrb_float f;
};
struct RCptr {
  MRB_OBJECT_HEADER;
  void *p;
};
enum mrb_special_consts {
  MRB_Qnil    = 0,
  MRB_Qfalse  = 2,
  MRB_Qtrue   = 4,
  MRB_Qundef  = 6,
};
typedef union mrb_value {
  union {
    void *p;
    struct {
      unsigned int i_flag : MRB_FIXNUM_SHIFT;
      mrb_int i : (MRB_INT_BIT - MRB_FIXNUM_SHIFT);
    };
    struct {
      unsigned int sym_flag : MRB_SPECIAL_SHIFT;
      mrb_sym sym : (sizeof(mrb_sym) * CHAR_BIT);
    };
    struct RBasic *bp;
#ifndef MRB_WITHOUT_FLOAT
    struct RFloat *fp;
#endif
    struct RCptr *vp;
  } value;
  unsigned long w;
} mrb_value;
#define mrb_float(o)   (o).value.fp->f
#define mrb_bool(o)    ((o).w != MRB_Qnil && (o).w != MRB_Qfalse)
typedef struct mrb_value {
  union {
#ifndef MRB_WITHOUT_FLOAT
    mrb_float f;
#endif
    void *p;
    mrb_int i;
    mrb_sym sym;
  } value;
  enum mrb_vtype tt;
} mrb_value;
#define mrb_float(o)    (o).value.f
#define mrb_bool(o)   (mrb_type(o) != MRB_TT_FALSE)
MRB_INLINE mrb_value mrb_fixnum_value(mrb_int i)
{
  mrb_value v;
  SET_INT_VALUE(v, i);
  return v;
}
MRB_END_DECL
MRB_BEGIN_DECL
struct mrb_state;
typedef int (mrb_each_object_callback)(struct mrb_state *mrb, struct RBasic *obj, void *data);
typedef struct mrb_gc {
  mrb_heap_page *heaps;                
  mrb_heap_page *sweeps;
  mrb_heap_page *free_heaps;
  size_t live; 
#ifdef MRB_GC_FIXED_ARENA
  struct RBasic *arena[MRB_GC_ARENA_SIZE]; 
#else
  struct RBasic **arena;                   
  int arena_capa;
#endif
  int arena_idx;
  mrb_gc_state state; 
  int current_white_part; 
  struct RBasic *gray_list; 
  struct RBasic *atomic_gray_list; 
  size_t live_after_mark;
  size_t threshold;
  int interval_ratio;
  int step_ratio;
  mrb_bool iterating     :1;
  mrb_bool disabled      :1;
  mrb_bool full          :1;
  mrb_bool generational  :1;
  mrb_bool out_of_memory :1;
  size_t majorgc_old_threshold;
} mrb_gc;
typedef uint32_t mrb_aspec;
struct mrb_irep;
struct mrb_state;
typedef void* (*mrb_allocf) (struct mrb_state *mrb, void*, size_t, void *ud);
struct mrb_context {
  struct mrb_context *prev;
  mrb_value *stack;                       
  mrb_value *stbase, *stend;
  mrb_callinfo *ci;
  mrb_callinfo *cibase, *ciend;
  mrb_code **rescue;                      
  int rsize;
  struct RProc **ensure;                  
  int esize, eidx;
  enum mrb_fiber_state status;
  mrb_bool vmexec;
  struct RFiber *fib;
};
typedef mrb_value (*mrb_func_t)(struct mrb_state *mrb, mrb_value);
struct mrb_cache_entry {
  struct RClass *c, *c0;
  mrb_sym mid;
  mrb_method_t m;
};
struct mrb_jmpbuf;
typedef void (*mrb_atexit_func)(struct mrb_state*);
typedef struct mrb_state {
  struct mrb_jmpbuf *jmp;
  uint32_t flags;
  mrb_allocf allocf;                      
  void *allocf_ud;                        
  struct mrb_context *c;
  struct mrb_context *root_c;
  struct iv_tbl *globals;                 
  struct RObject *exc;                    
  struct RObject *top_self;
  struct RClass *object_class;            
  struct RClass *class_class;
  struct RClass *module_class;
  struct RClass *proc_class;
  struct RClass *string_class;
  struct RClass *array_class;
  struct RClass *hash_class;
  struct RClass *range_class;
#ifndef MRB_WITHOUT_FLOAT
  struct RClass *float_class;
#endif
  struct RClass *fixnum_class;
  struct RClass *true_class;
  struct RClass *false_class;
  struct RClass *nil_class;
  struct RClass *symbol_class;
  struct RClass *kernel_module;
  struct alloca_header *mems;
  mrb_gc gc;
#ifdef MRB_METHOD_CACHE
  struct mrb_cache_entry cache[MRB_METHOD_CACHE_SIZE];
#endif
  mrb_sym symidx;
  struct kh_n2s *name2sym;      
  struct symbol_name *symtbl;   
  size_t symcapa;
#ifdef MRB_ENABLE_DEBUG_HOOK
  void (*code_fetch_hook)(struct mrb_state* mrb, struct mrb_irep *irep, mrb_code *pc, mrb_value *regs);
  void (*debug_op_hook)(struct mrb_state* mrb, struct mrb_irep *irep, mrb_code *pc, mrb_value *regs);
#endif
#ifdef MRB_BYTECODE_DECODE_OPTION
  mrb_code (*bytecode_decoder)(struct mrb_state* mrb, mrb_code code);
#endif
  struct RClass *eException_class;
  struct RClass *eStandardError_class;
  struct RObject *nomem_err;              
  struct RObject *stack_err;              
#ifdef MRB_GC_FIXED_ARENA
  struct RObject *arena_err;              
#endif
  void *ud; 
#ifdef MRB_FIXED_STATE_ATEXIT_STACK
  mrb_atexit_func atexit_stack[MRB_FIXED_STATE_ATEXIT_STACK_SIZE];
#else
  mrb_atexit_func *atexit_stack;
#endif
  mrb_int atexit_stack_len;
} mrb_state;
MRB_API struct RClass *mrb_define_class(mrb_state *mrb, const char *name, struct RClass *super);
MRB_API struct RClass *mrb_define_module(mrb_state *, const char*);
MRB_API void mrb_define_method(mrb_state *mrb, struct RClass *cla, const char *name, mrb_func_t func, mrb_aspec aspec);
MRB_API struct RClass * mrb_class_get(mrb_state *mrb, const char *name);
MRB_API struct RClass * mrb_exc_get(mrb_state *mrb, const char *name);
MRB_API mrb_bool mrb_class_defined_under(mrb_state *mrb, struct RClass *outer, const char *name);
MRB_API struct RClass * mrb_class_get_under(mrb_state *mrb, struct RClass *outer, const char *name);
MRB_API struct RClass * mrb_module_get(mrb_state *mrb, const char *name);
MRB_API struct RClass * mrb_module_get_under(mrb_state *mrb, struct RClass *outer, const char *name);
MRB_API mrb_value mrb_notimplement_m(mrb_state*, mrb_value);
MRB_API mrb_value mrb_obj_dup(mrb_state *mrb, mrb_value obj);
MRB_API mrb_value mrb_check_to_integer(mrb_state *mrb, mrb_value val, const char *method);
MRB_API mrb_bool mrb_obj_respond_to(mrb_state *mrb, struct RClass* c, mrb_sym mid);
MRB_API struct RClass * mrb_define_class_under(mrb_state *mrb, struct RClass *outer, const char *name, struct RClass *super);
MRB_API struct RClass * mrb_define_module_under(mrb_state *mrb, struct RClass *outer, const char *name);
#define MRB_ARGS_NONE()     ((mrb_aspec)0)
typedef const char *mrb_args_format;
MRB_API mrb_int mrb_get_args(mrb_state *mrb, mrb_args_format format, ...);
MRB_API mrb_value* mrb_get_argv(mrb_state *mrb);
MRB_API mrb_value mrb_funcall(mrb_state*, mrb_value, const char*, mrb_int,...);
MRB_API mrb_value mrb_funcall_argv(mrb_state*, mrb_value, mrb_sym, mrb_int, const mrb_value*);
MRB_API mrb_value mrb_funcall_with_block(mrb_state*, mrb_value, mrb_sym, mrb_int, const mrb_value*, mrb_value);
#define mrb_intern_lit(mrb, lit) mrb_intern_static(mrb, lit, mrb_strlen_lit(lit))
MRB_API mrb_sym mrb_intern_str(mrb_state*,mrb_value);
#define mrb_str_new_lit(mrb, lit) mrb_str_new_static(mrb, (lit), mrb_strlen_lit(lit))
MRB_API mrb_state* mrb_open(void);
MRB_API void mrb_close(mrb_state *mrb);
#define mrb_int(mrb, val) mrb_fixnum(mrb_to_int(mrb, val))
typedef struct mrbc_context {
  mrb_sym *syms;
  int slen;
  char *filename;
  short lineno;
  int (*partial_hook)(struct mrb_parser_state*);
  void *partial_data;
  struct RClass *target_class;
  mrb_bool capture_errors:1;
  mrb_bool dump_result:1;
  mrb_bool no_exec:1;
  mrb_bool keep_lv:1;
  mrb_bool no_optimize:1;
  size_t parser_nerr;
} mrbc_context;
MRB_API void mrbc_partial_hook(mrb_state *mrb, mrbc_context *c, int (*partial_hook)(struct mrb_parser_state*), void*data);
struct mrb_parser_state {
  mrb_state *mrb;
  struct mrb_pool *pool;
  mrb_ast_node *cells;
  const char *s, *send;
#ifndef MRB_DISABLE_STDIO
  FILE *f;
#endif
  mrbc_context *cxt;
  char const *filename;
  int lineno;
  int column;
  enum mrb_lex_state_enum lstate;
  mrb_ast_node *lex_strterm; 
  unsigned int cond_stack;
  unsigned int cmdarg_stack;
  int paren_nest;
  int lpar_beg;
  int in_def, in_single;
  mrb_bool cmd_start:1;
  mrb_ast_node *locals;
  mrb_ast_node *pb;
  char *tokbuf;
  char buf[MRB_PARSER_TOKBUF_SIZE];
  int tidx;
  int tsiz;
  mrb_ast_node *all_heredocs; 
  mrb_ast_node *heredocs_from_nextline;
  mrb_ast_node *parsing_heredoc;
  mrb_ast_node *lex_strterm_before_heredoc;
  mrb_bool heredoc_end_now:1; 
  void *ylval;
  size_t nerr;
  size_t nwarn;
  mrb_ast_node *tree;
  mrb_bool no_optimize:1;
  mrb_bool capture_errors:1;
  struct mrb_parser_message error_buffer[10];
  struct mrb_parser_message warn_buffer[10];
  mrb_sym* filename_table;
  size_t filename_table_length;
  int current_filename_index;
  struct mrb_jmpbuf* jmp;
};
MRB_API mrb_value mrb_load_file(mrb_state*,FILE*);
typedef struct {
  mrb_value v;
  mrb_int n;
} mrb_hash_value;
KHASH_DECLARE(ht, mrb_value, mrb_hash_value, TRUE)
#define RHASH(obj)   ((struct RHash*)(mrb_ptr(obj)))
mrb_value mrb_get_values_at(mrb_state *mrb, mrb_value obj, mrb_int olen, mrb_int argc, const mrb_value *argv, mrb_value (*func)(mrb_state*, mrb_value, mrb_int));
typedef struct mrb_irep {
  uint16_t nlocals;        
  uint16_t nregs;          
  uint8_t flags;
  mrb_code *iseq;
  mrb_value *pool;
  mrb_sym *syms;
  struct mrb_irep **reps;
  struct mrb_locals *lv;
  mrb_bool own_filename;
  const char *filename;
  uint16_t *lines;
  struct mrb_irep_debug_info* debug_info;
  int ilen, plen, slen, rlen, refcnt;
} mrb_irep;