mruby-sys/mruby_bindings_backuped.rs

extern "C" {
    /// Gets a class.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name The name of the class.
    /// @return [struct RClass *] A reference to the class.
    pub fn mrb_class_get(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> *mut RClass;
}
extern "C" {
    /// Gets a exception class.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name The name of the class.
    /// @return [struct RClass *] A reference to the class.
    pub fn mrb_exc_get(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> *mut RClass;
}
extern "C" {
    /// Returns an mrb_bool. True if inner class was defined, and false if the inner class was not defined.
    ///
    /// Example:
    /// void
    /// mrb_example_gem_init(mrb_state* mrb) {
    /// struct RClass *example_outer, *example_inner;
    /// mrb_bool cd;
    ///
    /// example_outer = mrb_define_module(mrb, "ExampleOuter");
    ///
    /// example_inner = mrb_define_class_under(mrb, example_outer, "ExampleInner", mrb->object_class);
    /// cd = mrb_class_defined_under(mrb, example_outer, "ExampleInner");
    ///
    /// // If mrb_class_defined_under returns 1 then puts "True"
    /// // If mrb_class_defined_under returns 0 then puts "False"
    /// if (cd == 1){
    /// puts("True");
    /// }
    /// else {
    /// puts("False");
    /// }
    /// }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer The name of the outer class.
    /// @param [const char *] name A string representing the name of the inner class.
    /// @return [mrb_bool] A boolean value.
    pub fn mrb_class_defined_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> mrb_bool;
}
extern "C" {
    /// Gets a child class.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer The name of the parent class.
    /// @param [const char *] name The name of the class.
    /// @return [struct RClass *] A reference to the class.
    pub fn mrb_class_get_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> *mut RClass;
}
extern "C" {
    /// Gets a module.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [const char *] name The name of the module.
    /// @return [struct RClass *] A reference to the module.
    pub fn mrb_module_get(mrb: *mut mrb_state, name: *const ::std::os::raw::c_char) -> *mut RClass;
}
extern "C" {
    /// Gets a module defined under another module.
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer The name of the outer module.
    /// @param [const char *] name The name of the module.
    /// @return [struct RClass *] A reference to the module.
    pub fn mrb_module_get_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_notimplement_m(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_value;
}
extern "C" {
    /// Duplicate an object.
    ///
    /// Equivalent to:
    /// Object#dup
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [mrb_value] obj Object to be duplicate.
    /// @return [mrb_value] The newly duplicated object.
    pub fn mrb_obj_dup(mrb: *mut mrb_state, obj: mrb_value) -> mrb_value;
}
extern "C" {
    pub fn mrb_check_to_integer(
        mrb: *mut mrb_state,
        val: mrb_value,
        method: *const ::std::os::raw::c_char,
    ) -> mrb_value;
}
extern "C" {
    /// Returns true if obj responds to the given method. If the method was defined for that
    /// class it returns true, it returns false otherwise.
    ///
    /// Example:
    /// # Ruby style
    /// class ExampleClass
    /// def example_method
    /// end
    /// end
    ///
    /// ExampleClass.new.respond_to?(:example_method) # => true
    ///
    /// // C style
    /// void
    /// mrb_example_gem_init(mrb_state* mrb) {
    /// struct RClass *example_class;
    /// mrb_sym mid;
    /// mrb_bool obj_resp;
    ///
    /// example_class = mrb_define_class(mrb, "ExampleClass", mrb->object_class);
    /// mrb_define_method(mrb, example_class, "example_method", exampleMethod, MRB_ARGS_NONE());
    /// mid = mrb_intern_str(mrb, mrb_str_new_lit(mrb, "example_method" ));
    /// obj_resp = mrb_obj_respond_to(mrb, example_class, mid); // => 1(true in Ruby world)
    ///
    /// // If mrb_obj_respond_to returns 1 then puts "True"
    /// // If mrb_obj_respond_to returns 0 then puts "False"
    /// if (obj_resp == 1) {
    /// puts("True");
    /// }
    /// else if (obj_resp == 0) {
    /// puts("False");
    /// }
    /// }
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] c A reference to a class.
    /// @param [mrb_sym] mid A symbol referencing a method id.
    /// @return [mrb_bool] A boolean value.
    pub fn mrb_obj_respond_to(mrb: *mut mrb_state, c: *mut RClass, mid: mrb_sym) -> mrb_bool;
}
extern "C" {
    /// Defines a new class under a given module
    ///
    /// @param [mrb_state*] mrb The current mruby state.
    /// @param [struct RClass *] outer Reference to the module under which the new class will be defined
    /// @param [const char *] name The name of the defined class
    /// @param [struct RClass *] super The new class parent
    /// @return [struct RClass *] Reference to the newly defined class
    /// @see mrb_define_class
    pub fn mrb_define_class_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
        super_: *mut RClass,
    ) -> *mut RClass;
}
extern "C" {
    pub fn mrb_define_module_under(
        mrb: *mut mrb_state,
        outer: *mut RClass,
        name: *const ::std::os::raw::c_char,
    ) -> *mut RClass;
}
/// Format specifiers for {mrb_get_args} function
///
/// Must be a C string composed of the following format specifiers:
///
/// | char | Ruby type      | C types           | Notes                                               |
/// |:----:|----------------|-------------------|----------------------------------------------------|
/// | `o`  | {Object}       | {mrb_value}       | Could be used to retrieve any type of argument     |
/// | `C`  | {Class}/{Module} | {mrb_value}     |                                                    |
/// | `S`  | {String}       | {mrb_value}       | when `!` follows, the value may be `nil`           |
/// | `A`  | {Array}        | {mrb_value}       | when `!` follows, the value may be `nil`           |
/// | `H`  | {Hash}         | {mrb_value}       | when `!` follows, the value may be `nil`           |
/// | `s`  | {String}       | char *, {mrb_int} |  Receive two arguments; `s!` gives (`NULL`,`0`) for `nil`       |
/// | `z`  | {String}       | char *            | `NULL` terminated string; `z!` gives `NULL` for `nil`           |
/// | `a`  | {Array}        | {mrb_value} *, {mrb_int} | Receive two arguments; `a!` gives (`NULL`,`0`) for `nil` |
/// | `f`  | {Float}        | {mrb_float}       |                                                    |
/// | `i`  | {Integer}      | {mrb_int}         |                                                    |
/// | `b`  | boolean        | {mrb_bool}        |                                                    |
/// | `n`  | {Symbol}       | {mrb_sym}         |                                                    |
/// | `&`  | block          | {mrb_value}       |                                                    |
/// | `*`  | rest arguments | {mrb_value} *, {mrb_int} | Receive the rest of arguments as an array.  |
/// | &vert; | optional     |                   | After this spec following specs would be optional. |
/// | `?`  | optional given | {mrb_bool}        | `TRUE` if preceding argument is given. Used to check optional argument is given. |
///
/// @see mrb_get_args
pub type mrb_args_format = *const ::std::os::raw::c_char;
extern "C" {
    /// Retrieve arguments from mrb_state.
    ///
    /// When applicable, implicit conversions (such as `to_str`, `to_ary`, `to_hash`) are
    /// applied to received arguments.
    /// Used inside a function of mrb_func_t type.
    ///
    /// @param mrb The current MRuby state.
    /// @param format [mrb_args_format] is a list of format specifiers
    /// @param ... The passing variadic arguments must be a pointer of retrieving type.
    /// @return the number of arguments retrieved.
    /// @see mrb_args_format
    pub fn mrb_get_args(mrb: *mut mrb_state, format: mrb_args_format, ...) -> mrb_int;
}
extern "C" {
    /// Retrieve number of arguments from mrb_state.
    ///
    /// Correctly handles *splat arguments.
    pub fn mrb_get_argc(mrb: *mut mrb_state) -> mrb_int;
}
extern "C" {
    pub fn mrb_get_argv(mrb: *mut mrb_state) -> *mut mrb_value;
}
extern "C" {
    /// Call existing ruby functions.
    ///
    /// #include <stdio.h>
    /// #include <mruby.h>
    /// #include "mruby/compile.h"
    ///
    /// int
    /// main()
    /// {
    /// mrb_int i = 99;
    /// mrb_state *mrb = mrb_open();
    ///
    /// if (!mrb) { }
    /// FILE *fp = fopen("test.rb","r");
    /// mrb_value obj = mrb_load_file(mrb,fp);
    /// mrb_funcall(mrb, obj, "method_name", 1, mrb_fixnum_value(i));
    /// fclose(fp);
    /// mrb_close(mrb);
    /// }
    /// @param [mrb_state*] mrb_state* The current mruby state.
    /// @param [mrb_value] mrb_value A reference to an mruby value.
    /// @param [const char*] const char* The name of the method.
    /// @param [mrb_int] mrb_int The number of arguments the method has.
    /// @param [...] ... Variadic values(not type safe!).
    /// @return [mrb_value] mrb_value mruby function value.
    pub fn mrb_funcall(
        arg1: *mut mrb_state,
        arg2: mrb_value,
        arg3: *const ::std::os::raw::c_char,
        arg4: mrb_int,
        ...
    ) -> mrb_value;
}
extern "C" {
    /// Call existing ruby functions. This is basically the type safe version of mrb_funcall.
    ///
    /// #include <stdio.h>
    /// #include <mruby.h>
    /// #include "mruby/compile.h"
    /// int
    /// main()
    /// {
    /// mrb_int i = 99;
    /// mrb_state *mrb = mrb_open();
    ///
    /// if (!mrb) { }
    /// mrb_sym m_sym = mrb_intern_lit(mrb, "method_name"); // Symbol for method.
    ///
    /// FILE *fp = fopen("test.rb","r");
    /// mrb_value obj = mrb_load_file(mrb,fp);
    /// mrb_funcall_argv(mrb, obj, m_sym, 1, &obj); // Calling ruby function from test.rb.
    /// fclose(fp);
    /// mrb_close(mrb);
    /// }
    /// @param [mrb_state*] mrb_state* The current mruby state.
    /// @param [mrb_value] mrb_value A reference to an mruby value.
    /// @param [mrb_sym] mrb_sym The symbol representing the method.
    /// @param [mrb_int] mrb_int The number of arguments the method has.
    /// @param [const mrb_value*] mrb_value* Pointer to the object.
    /// @return [mrb_value] mrb_value mruby function value.
    /// @see mrb_funcall
    pub fn mrb_funcall_argv(
        arg1: *mut mrb_state,
        arg2: mrb_value,
        arg3: mrb_sym,
        arg4: mrb_int,
        arg5: *const mrb_value,
    ) -> mrb_value;
}
extern "C" {
    /// Call existing ruby functions with a block.
    pub fn mrb_funcall_with_block(
        arg1: *mut mrb_state,
        arg2: mrb_value,
        arg3: mrb_sym,
        arg4: mrb_int,
        arg5: *const mrb_value,
        arg6: mrb_value,
    ) -> mrb_value;
}
